Fixed header alignment

--- a/assets/scss/modules/_navigation.scss
+++ b/assets/scss/modules/_navigation.scss
@@ -28,16 +28,12 @@
   height: 50px;
   position: absolute;
   top: 0;
-  left: -5px;
-  padding-left: 5px;
-  width: 103%;
+  width: 100%;
   transition: background-color 0.4s ease;
 
   .row {
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 5px;
-    padding-right: 5px;
 
     @media screen and (max-width: 640px) {
       padding: 0 15px;
@@ -184,7 +180,7 @@
 }
 
 .fa-shopping-cart {
-  
+
 }
 
 // Basic styles for post navigation. Nicolas Gallagher's "Micro clearfix"
@@ -263,8 +259,8 @@
   }
 
   .search-submit {
-    padding-left: 20px; 
-    color: #fff; 
+    padding-left: 20px;
+    color: #fff;
     cursor: pointer
   }
 }
