--- a/assets/scss/templates/_search.scss
+++ b/assets/scss/templates/_search.scss
@@ -35,8 +35,19 @@
 
 		a {
 
+
 			&:hover img {
-				box-shadow: 0px 0px 28px -1px rgba(255, 255, 255, 0.65);
+
+				-webkit-transition: -webkit-transform 1.25s cubic-bezier(0,0,.2,1);
+    			transition: -webkit-transform 1.25s cubic-bezier(0,0,.2,1);
+    			transition: transform 1.25s cubic-bezier(0,0,.2,1);
+   			transition: transform 1.25s cubic-bezier(0,0,.2,1),-webkit-transform 1.25s cubic-bezier(0,0,.2,1);
+   			transform: scale(1.1);
+			}
+
+			&:hover h2 {
+				top: 20px;
+				color: $mainBlue;
 			}
 
 		}
@@ -51,11 +62,14 @@
 		}
 
 		h2 {
+			position: relative;
+			top: 0;
 			color: #fff;
 			font-weight: 600;
 			font-size: 1rem;
 			padding: 10px 0 .5em;
 			margin: 0;
+			transition: all .6s ease;
 		}
 
 	}
@@ -84,7 +98,7 @@
 
 		@media screen and (min-width: 769px){
 		float: left;
-		margin: 0 3.8% 0.75em 0;
+		margin: 0 4% 2.992em 0;
 		padding: 0;
 		position: relative;
 		width: 22%;
